// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverHeight snapshots should render PopoverHeight 1`] = `
<DocumentFragment>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="0"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="fixed-height"
      height="12"
      name="FixedHeight"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Fixed height
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="1"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="auto-height"
      height="12"
      name="AutoHeight"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Auto height
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="2"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="percentage"
      height="12"
      name="Percentage"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Percentage
    </small>
  </div>
  <div
    class="css-3q7iqb"
    data-test-box=""
  />
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="3"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="min-height"
      height="12"
      name="MinHeight"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Add min height...
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="4"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="max-height"
      height="12"
      name="MaxHeight"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Add max height...
    </small>
  </div>
</DocumentFragment>
`;

exports[`PopoverHeight snapshots should render wiht mixed value 1`] = `
<DocumentFragment>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="0"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="fixed-height"
      height="12"
      name="FixedHeight"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Fixed height
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="1"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="auto-height"
      height="12"
      name="AutoHeight"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Auto height
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="2"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="percentage"
      height="12"
      name="Percentage"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Percentage
    </small>
  </div>
</DocumentFragment>
`;
